--- a/css/styles.css
+++ b/css/styles.css
@@ -29,8 +29,8 @@ header {
 
 footer {
     margin: 0;
-    padding: 20px;
-    background-color: black;
+    padding: 10px;
+    background-color: #3a4298;
     color: white;
     position: bottom;
     text-align: center;
