--- a/css/styles.css
+++ b/css/styles.css
@@ -5,13 +5,10 @@ body{
 
 a{
     color: #fff;
-    text-decoration: none;
-    
 }
 
 header {
     display: flex;
-    justify-content: space-between;
     height: 80px;
     background-color: #3a4298;
     justify-content: space-between;
@@ -26,12 +23,30 @@ header {
 
 }
 
-
+/* barra de navegacion */
+.nav{
+    margin-top: 2rem;
+}
+  
+  .nav a {
+    float: center;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  
+  .nav a:hover {
+    background-color: #ddd;
+    color: #3a4298;
+  }
+  
 footer {
     margin: 0;
     padding: 10px;
     background-color: #3a4298;
     color: white;
-    position: bottom;
     text-align: center;
 }
