--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,7 @@ header {
   h2 {
     text-align: justify;
     padding: 0px;
+    font-size: 20px;
     margin-left: 80px;
     margin-right: 0px;
  
@@ -74,6 +75,7 @@ header {
     font-size: 20px;
     margin-left: 80px;
     margin-right: 80px;
+    justify-content: center;
   }
   
   ul {
@@ -81,6 +83,10 @@ header {
     margin-left: 80px;
     margin-right: 80px;
     text-align: justify;
+  }
+
+  .servicios {
+   align-content: center;
   }
 
 footer {
