--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,18 @@ header {
    align-content: center;
   }
 
+  #cat-container {
+    text-align: center;
+}
+#cat-container img {
+    max-width: 100%;
+    height: auto;
+    border: 2px solid #ccc;
+    border-radius: 8px;
+    width: 300px; /* Fixed width */
+    height: 300px; /* Fixed height */
+}
+
 footer {
     margin: 0;
     padding: 10px;
